--- a/manifest.json
+++ b/manifest.json
@@ -31,7 +31,8 @@
     {
       "matches": ["<all_urls>"],
       "js": ["content_scripts/blocker.js"],
-      "run_at": "document_start"
+      "run_at": "document_start",
+      "all_frames": false
     }
   ],
   "declarative_net_request": {
@@ -43,7 +44,7 @@
       }
     ]
   },
-  "incognito": "split",
+  "incognito": "spanning",
   "icons": {
     "16": "icons/icon16.png",
     "32": "icons/icon32.png",
